--- a/parts/home.html
+++ b/parts/home.html
@@ -3,13 +3,19 @@
 
     <div  ng-repeat="por in st.visible_por | orderBy : st.sort_method.column : st.sort_method.new_first | filter : filter_por track by $index">
 
-        <div class="panel"  ng-class="{'panel-info' : (por.PRINTERNAMESID == 2), 'panel-warning' : (por.PRINTERNAMESID == 3), 'panel-primary' : (por.PRINTERNAMESID == 1),   'selected_por': bump_por == por.ID}" ng-style="{width :configuration.por_width + 'px'}" style="float:left; margin:10px;">
+        <div class="panel"
+             ng-class="{'panel-info' : (por.PRINTERNAMESID % 3 == 1), 'panel-warning' : (por.PRINTERNAMESID % 3 == 0), 'panel-primary' : (por.PRINTERNAMESID  % 3 == 2),   'selected_por': bump_por == por.ID}"
+             ng-style="{width :configuration.por_width + 'px'}"
+             style="float:left; margin:10px;">
             <div class="panel-heading" ng-click="mark_por(por.ID)" >
 
-                <p style="text-align: center"><span class="pull-left" style="font-size: larger">{{$index+1}} / {{st.visible_por.length}}</span><span class="pull-right" style="font-size: larger">{{por.COUNTER | secondsToDateTime | date:'HH:mm:ss'}}</span><span class="glyphicon glyphicon-hand-up"></span> </p>
+                <p style="text-align: center"><span class="pull-left" style="font-size: small">{{$index+1}} / {{st.visible_por.length}}</span><span class="pull-right" style="font-size: larger">
+                    {{por.COUNTER | secondsToDateTime | date:'HH:mm:ss'}}</span><span class="glyphicon glyphicon-hand-up"></span> </p>
 
             </div>
-            <div class="panel-body"  ng-style="configuration.por_overflow === true ? {minHeight : configuration.por_height + 'px'} : {maxHeight : configuration.por_height + 'px', minHeight : configuration.por_height + 'px'}" ng-class="{'storno' : por.STORNO == 1, 'marked': st.bump_por == por.ID}">
+            <div class="panel-body"
+                 ng-style="configuration.por_overflow === true ? {minHeight : configuration.por_height + 'px'} : {maxHeight : configuration.por_height + 'px', minHeight : configuration.por_height + 'px'}"
+                 ng-class="{'storno' : por.STORNO == 1, 'marked': st.bump_por == por.ID}">
                 <ul class="list-group">
                     <li  class="list-group-item " ng-repeat="line in por.SDR track by $index" ng-click="ready_line(line.ID)" ng-class="{'list-group-item-warning' : st.lineStyle[line.ID] === 1, 'list-group-item-default' : st.lineStyle[line.ID] === 0, 'list-group-item-success' :st.lineStyle[line.ID] === 2}">
 
