--- a/parts/home.html
+++ b/parts/home.html
@@ -9,7 +9,7 @@
              style="float:left; margin:10px;">
             <div class="panel-heading" ng-click="mark_por(por.ID)" >
 
-                <p style="text-align: center"><span class="pull-left" style="font-size: small">{{$index+1}} / {{st.visible_por.length}}</span><span class="pull-right" style="font-size: larger">
+                <p style="text-align: center"><span class="pull-left" style="font-size: small">{{$index+1}} / {{st.visible_por.length}}</span><span class="pull-right" style="font-size: large">
                     {{por.COUNTER | secondsToDateTime | date:'HH:mm:ss'}}</span><span class="glyphicon glyphicon-hand-up"></span> </p>
 
             </div>
@@ -29,6 +29,7 @@
                 <p><span >{{por.NAME}}</span> <span class="pull-right"> {{por.PRINTERNAME}}</span></p>
 
                 <p>Маса: <span class="badge">{{por.MACA}}</span>, Бр: <span class="badge">{{por.SDR.length}}</span><strong class="pull-right">{{por.DTPOR}}</strong></p>
+                <p>Номер: {{por.ID}}</p>
             </div>
             </div>
         </div>
